# skillbox

./: .gitignore
practice 10/: task_1.cpp
practice 11/: task_1.cpp  task_2.cpp  task_3.cpp  task_4.cpp
practice 12/: task_1.cpp  task_2.cpp  task_3.cpp  task_4.cpp
practice 13/: task_1.cpp  task_2.cpp  task_3.cpp
practice 14/: task_1.cpp  task_2.cpp  task_3.cpp  task_4.cpp  task_5.cpp  task_6.cpp  task_7.cpp  task_8.cpp
practice 15/: task_1.cpp  task_2.cpp  task_3.cpp  task_4.cpp
practice 16/: task_1.cpp  task_2.cpp  task_3.cpp  task_4.cpp  task_5.cpp
practice 17/: task_1.cpp  task_2.cpp  task_3.cpp
practice 18/: task_1.cpp  task_2.cpp  task_3.cpp
practice 19/: task_1.cpp  task_2.cpp  task_3.cpp  task_4.cpp  task_5.cpp
practice 20/: task_1.cpp  task_2.cpp  task_3.cpp  task_4.cpp
practice 21/: task_1.cpp  task_2.cpp  task_3.cpp  task_4.cpp
practice 22/: task_1.cpp  task_2.cpp  task_3.cpp
practice 23/: task_1.cpp  task_2.cpp  task_3.cpp
practice 24/: task_1.cpp  task_2.cpp  task_3.cpp
practice 25/task_1/: CMakeLists.txt
practice 25/task_2/: CMakeLists.txt
practice 25/task_2/src/: CMakeLists.txt  cpu.cpp  disk.cpp  gpu.cpp  kbd.cpp  main.cpp  ram.cpp
practice 26/task_1/: CMakeLists.txt
practice 26/task_2/: main.cpp
practice 26/task_3/: main.cpp
practice 27/task_1/: main.cpp
practice 27/task_2/: main.cpp
practice 27/task_3/: main.cpp
practice 28/kitchen/: CMakeLists.txt  main.cpp
practice 28/railway station/: CMakeLists.txt  main.cpp
practice 28/swim/: CMakeLists.txt  main.cpp
practice 29/ShapeInterface/: CMakeLists.txt  (+1 more)
(+65 files in other folders)
